<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnergYT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="URL">URL:</string>
    <string name="defaultURL"></string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="title_activity_flash">FlashActivity</string>

</resources>